--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: frankfurt # optional (defaults to oregon)
     plan: free # optional (defaults to starter)
     branch: main # optional (defaults to master)
-    buildCommand: npm install -g node-fetch
+    buildCommand: "npm install -g node-fetch"
     numInstances: 1
     healthCheckPath: /healthz
     envVars:
