--- a/render.yaml
+++ b/render.yaml
@@ -4,15 +4,18 @@ services:
     env: docker
     region: frankfurt
     plan: free
-    branch: main
-    buildCommand: "npm install -g node-fetch"
+    branch: sqllite
     numInstances: 1
     healthCheckPath: /healthz
     envVars:
-      - key: DB_TYPE
-        value: sqlite
-      - key: DB_SQLITE_DATABASE
-        value: /home/node/.n8n/database.sqlite
+      - key: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
+        value: true
+      - key: N8N_RUNNERS_ENABLED
+        value: true
+      - key: N8N_DEFAULT_LOCALE
+        value: fr
+      - key: N8N_ENCRYPTION_KEY
+        generateValue: true
       - key: PORT
         value: 5678
       - key: N8N_LOG_LEVEL
@@ -21,10 +24,10 @@ services:
         value: Europe/Paris
       - key: TZ
         value: Europe/Paris
-      - key: N8N_DEFAULT_LOCALE
-        value: fr
-      - key: N8N_ENCRYPTION_KEY
-        generateValue: true
+      - key: DB_TYPE
+        value: sqlite
+      - key: DB_SQLITE_DATABASE
+        value: /home/node/.n8n/database.sqlite
 
 disks:
   - name: n8nData
